...
              Get.to(() =>HomeScreen());
            },
            child: Row(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                // Space between icon and text
                Text("Go Back to Home Page"),
              ],
            ),
          ),
        ],
      ),
    );
...
