...
                          onTap: () {
                               Get.to(() =>ProfileEditScreen());
                           
                          },
                          child: AccountOptionButton(
                              btnIcon: Icons.account_circle_outlined,
                              btnText: "Your profile"),
                        ),
                        AccountOptionButton(
                            btnIcon: Icons.credit_card,
                            btnText: "Payment methods"),
                        GestureDetector(
                          onTap: () { Get.to(()=>ForgotPasswordScreen());},
...
